--- a/src/main/resources/templates/Student/index.html
+++ b/src/main/resources/templates/Student/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head th:replace="/fragments/lib.html::head('index')">
 </head>
+<header th:replace="/fragments/heading.html::heading">
+    <div th:fragment="heading">
+        toi la header
+    </div>
+</header>
 <body>
    <table class="table">
        <thead class="thead-dark">
@@ -27,6 +29,9 @@
            password
        </th>
        <th>
+           classroom
+       </th>
+       <th>
            Action
        </th>
        </thead>
@@ -38,6 +43,7 @@
            <td th:text=" ${student.dateOfBirth}"></td>
            <td th:text=" ${student.email}"></td>
            <td th:text=" ${student.password}"></td>
+           <td th:text=" ${student.classroom}"></td>
            <td>
                <a th:href="'/students/edit/'+${student.id}">Edit</a>
                <a th:href="'/students/delete/'+${student.id}">Delete</a>
