--- a/src/main/resources/templates/Fragment/lib.html
+++ b/src/main/resources/templates/Fragment/lib.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"  xmlns:th="">
 <head th:fragment="lib(title)">
   <meta charset="UTF-8">
   <title th:text="${title}"></title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
+
 <body>
-<header th:fragment="nav">
   <nav>
     <ul>
       <li sec:authorize="isAuthenticated()">
           <p th:text="'em chao anh '+${#authentication.principal.getDisplayName()}"></p>
       </li>
       <li sec:authorize="isAnonymous()">
-        <p>dang nhap di</p>
+        <p>Login required</p>
       </li>
       <li><a th:href="@{/}">Home</a></li>
       <li><a th:href="@{/about}">About</a></li>
       <li><a th:href="@{/contact}">Contact</a></li>
       <li><a th:href="@{/login}">Login</a></li>
       <li><a th:href="@{/login}">USER</a></li>
+      <li><a th:href="@{/register}">Register</a></li>
       <li sec:authorize="hasAnyRole('ADMIN')"><a th:href="@{/login}">ADMIN</a></li>
       <li sec:authorize="hasAnyRole('MODIFIER')"><a th:href="@{/login}">MODIFIER</a></li>
-
     </ul>
   </nav>
-</header>
-
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
