--- a/src/main/resources/templates/Layout/Auth/Login.html
+++ b/src/main/resources/templates/Layout/Auth/Login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="Fragment/lib.html::nav">
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <div th:if="${param.error}">
@@ -20,8 +21,9 @@
         <input type="password" name="password"/>
     </div>
     <div>
-        <button type="submit">Login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
     </div>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
