--- a/src/main/resources/templates/Layout/Role/index.html
+++ b/src/main/resources/templates/Layout/Role/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head th:replace="Fragment/lib.html::lib('Role')">>
+<html lang="en" xmlns:th="">
+<head th:replace="Fragment/lib.html::lib('Role')">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -19,6 +20,6 @@
     </tr>
     </tbody>
 </table>
-<button onclick="location.href='/roles/new'">Create</button>
+<button class="btn btn-success" onclick="location.href='/roles/new'">Create</button>
 </body>
 </html>
