--- a/src/main/resources/templates/Layout/User/index.html
+++ b/src/main/resources/templates/Layout/User/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="">
 <head th:replace="Fragment/lib.html::lib('User')">
     <meta charset="UTF-8">
     <title>Title</title>
@@ -38,6 +38,6 @@
     </tr>
     </tbody>
 </table>
-<button onclick="location.href='/users/new'">Create</button>
+<button class="btn btn-danger" onclick="location.href='/users/new'">Create</button>
 </body>
 </html>
