--- a/src/main/resources/templates/Layout/Auth/login.html
+++ b/src/main/resources/templates/Layout/Auth/login.html
@@ -15,6 +15,10 @@
         <div>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" />
+
+        </div>
+        <div>
+            <input type="checkbox" name="remember-me">Remember-me</input>
         </div>
         <div>
             <button type="submit">Login</button>
